refactor(Controller): 统一Stream收集方法并优化实体类注释
此次提交主要完成了以下几项改进：
1. 将所有Controller中的`.toList()`替换为`.collect(Collectors.toList())`，提高代码的一致性
2. 对多个实体类（SaleInvoice、UserInfo、ProductInfo、CustomerInfo）添加详细的JavaDoc注释，说明字段含义和业务逻辑
3. 更新依赖版本，包括FastJSON升级至2.0.32及MySQL驱动更换为mysql-connector-j
4. 在AuthController中增强了日志记录和异常处理机制，提升安全性

Co-developed-by: Aone Copilot <noreply@alibaba-inc.com>